Project Run issue solved and project stracture modified

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=AccountManagementSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=AccountManagementSystem2;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
